// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render editable 1`] = `
<div>
  <div
    class="sc-AxhUy bDdNbc"
  >
    <div
      class="sc-AxhCb brtxRQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Amount
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Action
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                1
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 1
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FJKDSA…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
            <td
              class="w-20 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                2
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 2
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AhFJKD…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
            <td
              class="w-20 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                3
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 3
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
            <td
              class="w-20 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                4
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 4
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
            <td
              class="w-20 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`SendTransactionForm should render non-editable 1`] = `
<div>
  <div
    class="sc-AxhUy bDdNbc"
  >
    <div
      class="sc-AxhCb brtxRQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Avatar
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Address
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Amount
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                1
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 1
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FJKDSA…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                2
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 2
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AhFJKD…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                3
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 3
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="py-6 w-14"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-theme-neutral"
              >
                Recipient #
                4
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 4
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td>
              <div
                class="mb-1 text-sm font-semibold text-right text-theme-neutral"
              >
                Amount
              </div>
              <div
                class="font-bold text-right text-theme-neutral-800"
              >
                100
                 
                ARK
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
